# Quant_Platform

./: .env.example  .gitignore  pyproject.toml
.zvt/data/akshare/: akshare_stock_1d_hfq_kdata.db  akshare_stock_1d_kdata.db  akshare_stock_adj_factor.db
.zvt/data/eastmoney/: eastmoney_dividend_financing.db  eastmoney_finance.db
.zvt/data/em/: em_actor_meta.db  em_block_1d_kdata.db  em_block_1mon_kdata.db  em_block_1wk_kdata.db  em_block_meta.db  em_blockus_meta.db  em_cbond_meta.db  em_currency_1d_kdata.db  em_currency_meta.db  em_future_1d_kdata.db  em_future_meta.db  em_index_1m_kdata.db  em_index_1wk_kdata.db  em_index_meta.db  em_indexhk_1d_kdata.db  em_indexhk_meta.db  em_indexus_1d_kdata.db  em_indexus_meta.db  em_monetary.db  em_stock_1d_kdata.db  em_stock_1wk_kdata.db  em_stock_30m_hfq_kdata.db  em_stock_4h_hfq_kdata.db  em_stock_actor.db  em_stock_meta.db  em_stock_news.db  em_stockhk_1d_hfq_kdata.db  em_stockhk_1d_kdata.db  em_stockhk_meta.db  em_stockhk_quote.db  em_stockus_1d_hfq_kdata.db  em_stockus_1d_kdata.db  em_stockus_meta.db  em_stockus_quote.db
.zvt/data/wb/: wb_macro.db  (+1 more)
config/: settings.toml  strategies.yaml
data_lake/: quant.duckdb
doc/: Feedback.md  Log.md  Plan.md  Project.md  Walkthrough.md
engine/: pipeline.py
engine/factor/: backtest_runner.py  incremental_updater.py
engine/qlib_bridge/: dumper.py
engine/simulation/: __init__.py  models.py
engine/vectorbt_engine/: accumulators.py  compiler.py
engine/zvt_bridge/: __init__.py  data_syncer.py
examples/: batch_backtest_example.py  test_dag_dependencies.py  zvt_backtest_example.py
execution/: position_manager.py  risk_control.py
execution/router/: base.py  vnpy_connector.py  xtquant_connector.py
factor_library/: __init__.py  base.py  dag.py  preprocessor.py  registry.py  universe.py
factor_library/docs/: FACTOR_TEMPLATE.md  risk_adjusted_momentum.md
factor_library/operators/: __init__.py  cross_section.py  time_series.py
factor_library/technical/: __init__.py  momentum.py  risk_adjusted_momentum.py  volatility.py
infra/: connection.py  query.py  scheduler.py  storage.py  writer.py
libs/zvt/: setup.py
scripts/: audit_data.py  migrate_schema.py  run_momentum_strategy.py  test_pipeline_vbt.py  update_daily.py
strategies/: alpha_001.py
tests/: conftest.py  test_adj_factor_recorder.py  test_factor_basic.py  test_factor_library.py  test_incremental_calculation.py  test_kdata_recorder.py  test_pipeline.py  test_preprocessor.py  test_risk_adjusted_momentum_incremental.py  test_storage_refactor.py  test_zvt_adapter_integration.py
(+108 files in other folders)
