[project]
name = "Quant_Platform"
version = "0.1.0"
description = "A high-performance quantitative trading platform based on ZVT, VectorBT, and Qlib."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "zvt",
    "vectorbt",
    "duckdb==1.5.0",
    "polars==1.39.0",
    "prefect==3.6.22",
    "qlib",
    "torch>=2.0.0",
    "numba==0.64.0",
    "pandas~=2.3.3",
    "numpy~=2.2.6",
    "clickhouse-driver",
    "sqlalchemy==2.0.48",
    "tomli",
    "pyarrow==23.0.1",
    "pandas-stubs~=2.3.3",
    "python-dotenv==1.2.2",
    "setuptools==82.0.1",
    "akshare==1.18.40",
    "alphalens-reloaded>=0.4.3",
    "ruff>=0.15.6",
    "jupyterlab==4.5.6",
]

[tool.uv.sources]
zvt = { path = "libs/zvt", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "jupyterlab",
    "ipython"
]

