[project]
name = "Quant_Platform"
version = "0.1.0"
description = "A high-performance quantitative trading platform based on ZVT, VectorBT, and Qlib."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "zvt",
    "vectorbt",
    "duckdb==1.5.0",
    "prefect==3.6.22",
    "pyqlib",
    "torch>=2.0.0,<3.0.0",
    "numba==0.64.0",
    "pandas~=2.3.3",
    "numpy~=2.2.6",
    "sqlalchemy==2.0.48",
    "tomli",
    "pyarrow==23.0.1",
    "python-dotenv==1.2.2",
    "akshare==1.18.40",
    "alphalens-reloaded>=0.4.3",
    "jupyterlab==4.5.6",
]

[tool.uv.sources]
zvt = { path = "libs/zvt", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "jupyterlab",
    "ipython",
    "ruff>=0.15.6",
    "pandas-stubs~=2.3.3",
]

